SERVER-17163 cancel chunk migration on the primary when the node is stepped down